--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     <!-- Variables CSS Files. Uncomment your preferred color scheme -->
     <!-- <link href="assets/css/variables.css" rel="stylesheet" />-->
@@ -100,9 +102,8 @@
       <div class="particulas"></div>
       <div class="container d-flex flex-column justify-content-center align-items-center text-center position-absolute" data-aos="zoom-out">
         <h2>Welcome to Block<span>fy</span></h2>
-        <p>Et voluptate esse accusantium accusamus natus reiciendis quidem voluptates similique aut.</p>
+        <p>Transformando ideas en soluciones tecnológicas, apoyando el crecimiento de proyectos en etapas tempranas.</p>
         <div class="d-flex">
-          <a href="#about" class="btn-get-started scrollto">Get Started</a>
           <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
         </div>
       </div>
@@ -129,8 +130,8 @@
       <section id="portfolio" class="portfolio" data-aos="fade-up">
         <div class="container">
           <div class="section-header">
-            <h2>Portfolio</h2>
-            <p>Non hic nulla eum consequatur maxime ut vero memo vero totam officiis pariatur eos dolorum sed fug dolorem est possimus esse quae repudiandae. Dolorem id enim officiis sunt deserunt esse soluta consequatur quaerat</p>
+            <h2>Sitios de terceros desarrollados por Blockfy</h2>
+            <p>Echemos un vistazo a algunos casos de éxito que crecieron con nosotros.</p>
           </div>
         </div>
 
@@ -145,57 +146,65 @@
             <!-- End Portfolio Filters -->
 
             <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="500">
-              <div class="cards d-flex row justify-content-between portfolio-item filter-app">
+              <div class="portfolio-item filter-app">
+              <div class="cards d-flex row justify-content-between ">
                 <div class="d-flex row justify-content-center containers mt-5">
                   <div class="col-lg-4 col-mg-6-col-sm-10 img-card m-2">
-                    <img src="assets/img/missuniverse.png" alt="" />
+                    <a href="#descripcionMissuniverse" class="glightbox"><img src="assets/img/missuniverse.png" alt="" /></a>
                   </div>
                   <div class="col-lg-4 col-mg-6-col-sm-10 info m-2">
-                    <h2>Portfolio</h2>
-                    <p>Non hic nulla eum consequatur maxime ut vero memo vero totam officiis pariatur eos dolorum sed fug dolorem est possimus esse quae repudiandae. Dolorem id enim officiis sunt deserunt esse soluta consequatur quaerat</p>
+                    <h2>Miss Universe Colombia</h2>
+                    <p>Primera aplicación descentralizada (Dapp) para el certamen de belleza mundial, permite crear colecciones NFT propias sin necesidad de usar código o crear contratos inteligentes, también permite mediante conexión web 3.0 subastar activos digitales, y generar recaudación para fines de responsabilidad social.</p>
                   </div>
                 </div>
                 <div class="d-flex row justify-content-center mt-5">
-                  <div class="col-lg-8 col-sm-10 descripcion">
-                    <iframe src="https://aritymissuniverse.arity.club/"></iframe>
-                  </div>
-                </div>
-              </div>
-              <!-- End Portfolio Item -->
-              <div class="cards d-flex row justify-content-between portfolio-item filter-app">
-                <div class="d-flex row justify-content-center containers mt-5">
-                  <div class="col-lg-4 col-mg-6-col-sm-10 img-card m-2">
-                    <img src="assets/img/missuniverse.png" alt="" />
-                  </div>
-                  <div class="col-lg-4 col-mg-6 col-sm-10 info m-2">
-                    <h2>Portfolio</h2>
-                    <p>Non hic nulla eum consequatur maxime ut vero memo vero totam officiis pariatur eos dolorum sed fug dolorem est possimus esse quae repudiandae. Dolorem id enim officiis sunt deserunt esse soluta consequatur quaerat</p>
-                  </div>
-                </div>
-                <div class="d-flex row justify-content-center mt-5">
-                  <div class="col-lg-8 col-sm-10 descripcion">
-                    <iframe src="https://aritymissuniverse.arity.club/"></iframe>
-                </div>
-              </div>
-              <!-- End Portfolio Item -->
-              <div class="cards d-flex row justify-content-between portfolio-item filter-app">
-                <div class="d-flex row justify-content-center containers mt-5">
-                  <div class="col-lg-4 col-mg-6-col-sm-10 img-card m-2">
-                    <img src="assets/img/missuniverse.png" alt="" />
-                  </div>
-                  <div class="col-lg-4 col-mg-6-col-sm-10 info m-2">
-                    <h2>Portfolio</h2>
-                    <p>Non hic nulla eum consequatur maxime ut vero memo vero totam officiis pariatur eos dolorum sed fug dolorem est possimus esse quae repudiandae. Dolorem id enim officiis sunt deserunt esse soluta consequatur quaerat</p>
-                  </div>
-                </div>
-                <div class="d-flex row justify-content-center mt-5">
-                  <div class="col-lg-8 col-sm-10 descripcion">
-                    <h2>DESCRIPCION</h2>
-                    <p>Non hic nulla eum consequatur maxime ut vero memo vero totam officiis pariatur eos dolorum sed fug dolorem est possimus esse quae repudiandae. Dolorem id enim officiis sunt deserunt esse soluta consequatur quaerat</p>
+                  <div class="col-lg-8 col-sm-10 descripcion" style="display: none">
+                    <iframe id="descripcionMissuniverse" src="https://aritymissuniverse.arity.club/"></iframe>
                   </div>
                 </div>
               </div>
             </div>
+              <!-- End Portfolio Item -->
+              <div class="portfolio-item filter-product">
+              <div class="cards d-flex row justify-content-between ">
+                <div class="d-flex row justify-content-center containers mt-5">
+                  <div class="col-lg-4 col-mg-6-col-sm-10 info m-2">
+                    <h2>Principia </h2>
+                    <p>Mediante una aplicación descentralizada, nuestro aliado puede tokenizar proyectos externos sin necesidad de tener un equipo blockcahin especializado en su composición empresarial, este fondo de inversión actualmente tokeniza en su gran mayoría proyectos en el sector de real state.</p>
+                  </div>
+                  <div class="col-lg-4 col-mg-6-col-sm-10 img-card m-2">
+                    <a href="#descripcion" class="glightbox"><img src="assets/img/Principia.png" style="object-fit: fill; border: 5px solid #00eeff" alt="" /></a>
+                  </div>
+                </div>
+                <div class="d-flex row justify-content-center mt-5">
+                  <div class="col-lg-8 col-sm-10 descripcion" style="display: none">
+                    <iframe id="descripcion" src="https://principia.contractsol.co/"></iframe>
+                  </div>
+                </div>
+              </div>
+            </div>
+              <!-- End Portfolio Item -->
+              <div class="portfolio-item filter-app">
+              <div class="cards d-flex row justify-content-between ">
+                <div class="d-flex row justify-content-center containers mt-5">
+                  <div class="col-lg-4 col-mg-6-col-sm-10 img-card m-2">
+                    <a href="#descripcionArity" class="glightbox"><img src="assets/img/Arity.png" alt="" /></a>
+                  </div>
+                  <div class="col-lg-4 col-mg-6-col-sm-10 info m-2">
+                    <h2>Arity</h2>
+                    <p>El primer proyecto en colombia que fusiona la extracción legal y ambientalmente permitida de oro mineral y la posibilidad de invertir con pocas cantidades de liquidez en esta actividad de bajo riesgo, la democratización de la extracción de oro.
+                      <br></br>
+                      También mediante esta solución tecnológica pueden tener trazabilidad completa de joyas terminadas usando materiales de su propiedad para generar alto valor agregado.</p>
+                  </div>
+                </div>
+                <div class="d-flex row justify-content-center mt-5">
+                  <div class="col-lg-8 col-sm-10 descripcion" style="display: none">
+                    <iframe id="descripcionArity" src="https://arity.club/"></iframe>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
             <!-- End Portfolio Container -->
           </div>
         </div>
@@ -206,50 +215,35 @@
         <div class="container" data-aos="fade-up">
           <div class="animation"></div>
           <div class="section-header">
-            <h2>About Us</h2>
-            <p>Architecto nobis eos vel nam quidem vitae temporibus voluptates qui hic deserunt iusto omnis nam voluptas asperiores sequi tenetur dolores incidunt enim voluptatem magnam cumque fuga.</p>
+            <h2>Sobre nosotros</h2>
+            <p>
+              Blockfy es una marca desarrollada por Contract.sol SAS, una compañia colombiana con inversionistas residentes en New York,  nos enfocamos en la creación de herramientas que empleen poco código para dar solución a desarrollo web 3.0, nuestros aliados han solucionado sus inconvenientes sin necesidad de contratar un equipo especializado interno, al usar mano de obra colombiana reducimos los costos de producción de código convirtiendo nuestros precios en opciones altamente competitivas en la región. 
+              <br>
+              Escuchamos ideas, desarrollamos software a partir de ellas y ayudamos a incubar para que estés en el mercado lo antes posible, ve a contacto y escríbenos, una reunión de 15 minutos podría resultar en una inercia empresarial increible.</p>
           </div>
         </div>
       </section>
       <!-- End About Section -->
       <!-- ======= Contact Section ======= -->
-      <section id="contact" class="contact">
+      <section id="contact" class="contacto">
+        <div class="section-header mb-5">
+          <h2>Contacto</h2>
+          <p>Architecto nobis eos vel nam quidem vitae temporibus voluptates qui hic deserunt iusto omnis nam voluptas asperiores sequi tenetur dolores incidunt enim voluptatem magnam cumque fuga.</p>
+        </div>
         <div class="container">
-          <div class="row gy-5 gx-lg-5">
-            <div class="col-lg-12">
-              <div class="info d-flex row justify-content-center align-items-center">
-                <div class="row">
-                  <h3>Get in touch</h3>
-                  <p>Et id eius voluptates atque nihil voluptatem enim in tempore minima sit ad mollitia commodi minus.</p>
-                </div>
-                <div class="info-item d-flex col-4">
-                  <i class="bi bi-geo-alt flex-shrink-0"></i>
-                  <div>
-                    <h4>Location:</h4>
-                    <p>A108 Adam Street, New York, NY 535022</p>
-                  </div>
-                </div>
-                <!-- End Info Item -->
-
-                <div class="info-item d-flex col-4">
-                  <i class="bi bi-envelope flex-shrink-0"></i>
-                  <div>
-                    <h4>Email:</h4>
-                    <p>info@example.com</p>
-                  </div>
-                </div>
-                <!-- End Info Item -->
-
-                <div class="info-item d-flex col-4">
-                  <i class="bi bi-phone flex-shrink-0"></i>
-                  <div>
-                    <h4>Call:</h4>
-                    <p>+1 5589 55488 55</p>
-                  </div>
-                </div>
-                <!-- End Info Item -->
+          <div class="Contactheader">
+            <a href="javascript:void(0)" class="btn btn-hello">SAY HELLO</a>
+            <div class="contact">
+              <div class="tiles-container abs-center">
+                <div class="contact-tiles facebook">FACEBOOK</div>
+                <div class="contact-tiles instagram">INSTAGRAM</div>
+                <div class="contact-tiles email">E-MAIL</div>
+                <div class="contact-tiles telephone">TELEPHONE</div>
               </div>
             </div>
+          </div>
+          <div class="main">
+            <a href="javascript:void(0)" class="btn btn-hello ">SAY HELLO</a>
           </div>
         </div>
       </section>
@@ -271,7 +265,7 @@
               <!-- You can delete the links only if you purchased the pro version. -->
               <!-- Licensing information: https://bootstrapmade.com/license/ -->
               <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-               by <a href="https://contractsol.co/">Contractsol</a>
+              By <a href="https://contractsol.co/">Contract.sol SAS - Colombia</a>
             </div>
           </div>
 
