--- a/index.html
+++ b/index.html
@@ -66,24 +66,10 @@
               <a href="#"><span>Universo Blockfy</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
               <ul>
                 <li>
-                  <a href="#">Column 1 link 1</a>
-                  <a href="#">Column 1 link 2</a>
-                  <a href="#">Column 1 link 3</a>
-                </li>
-                <li>
-                  <a href="#">Column 2 link 1</a>
-                  <a href="#">Column 2 link 2</a>
-                  <a href="#">Column 3 link 3</a>
-                </li>
-                <li>
-                  <a href="#">Column 3 link 1</a>
-                  <a href="#">Column 3 link 2</a>
-                  <a href="#">Column 3 link 3</a>
-                </li>
-                <li>
-                  <a href="#">Column 4 link 1</a>
-                  <a href="#">Column 4 link 2</a>
-                  <a href="#">Column 4 link 3</a>
+                  <a href="#">Real State</a>
+                  <a href="#">Gaming & metaversos</a>
+                  <a href="#">Procesos de descentralización de minería amigable</a>
+                  <a href="#">Emprendimiento de startups por medio de tokenización on chain</a>
                 </li>
               </ul>
             </li>
@@ -226,17 +212,17 @@
       <section id="contact" class="contacto">
         <div class="section-header mb-5">
           <h2>Contacto</h2>
-          <p>Architecto nobis eos vel nam quidem vitae temporibus voluptates qui hic deserunt iusto omnis nam voluptas asperiores sequi tenetur dolores incidunt enim voluptatem magnam cumque fuga.</p>
+          <p>Para establecer contacto con nosotros da click en say hello y escoge la opcion de tu preferencia</p>
         </div>
         <div class="container">
           <div class="Contactheader">
             <a href="javascript:void(0)" class="btn btn-hello">SAY HELLO</a>
             <div class="contact">
               <div class="tiles-container abs-center">
-                <div class="contact-tiles facebook">FACEBOOK</div>
-                <div class="contact-tiles instagram">INSTAGRAM</div>
-                <div class="contact-tiles email">E-MAIL</div>
-                <div class="contact-tiles telephone">TELEPHONE</div>
+                <a href="https://www.linkedin.com/in/nicole-geraldine-guzman-garc%C3%ADa-58958a17a/" class="contact-tiles facebook">LINKEDIN</a>
+                <a href="https://www.instagram.com/daniluquetv/" class="contact-tiles instagram">INSTAGRAM</a>
+                <a href = "mailto: business@contract-sol.com" class="contact-tiles email">E-MAIL</a>
+                <a href="https://wa.me/+573208949771" class="contact-tiles telephone">WHATSAPP</a>
               </div>
             </div>
           </div>
