--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h2>Welcome to Block<span>fy</span></h2>
         <p>Transformando ideas en soluciones tecnológicas, apoyando el crecimiento de proyectos en etapas tempranas.</p>
         <div class="d-flex">
-          <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+          <a href="https://www.youtube.com/watch?v=RNY7HUi4KV8&t=3s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
         </div>
       </div>
     </section>
