--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </header>
     <!-- End Header -->
 
-    <section id="hero-animated" class="hero-animated d-flex align-items-center position-relative">
+    <section id="hero-animated" class="hero-animated d-flex justify-content-center align-items-center position-relative">
       <div class="particulas"></div>
       <div class="container d-flex flex-column justify-content-center align-items-center text-center position-absolute" data-aos="zoom-out">
         <h2>Welcome to Block<span>fy</span></h2>
