--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <li>
               <a href="#"><span>Home</span></a>
             </li>
-            <li><a class="nav-link scrollto" href="index.html#portfolio">Portfolio</a></li>
+            <li><a class="nav-link scrollto" href="index.html#ejemplo">Servicios</a></li>
             <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
             <li class="dropdown megamenu">
               <a href="#"><span>Universo Blockfy</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
@@ -73,7 +73,7 @@
                 </li>
               </ul>
             </li>
-            <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
+            <li><button class="botonContacto">Contactenos</button></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle d-none"></i>
         </nav>
@@ -82,155 +82,83 @@
     </header>
     <!-- End Header -->
 
-    <section id="hero-animated" class="hero-animated d-flex justify-content-center align-items-center position-relative">
-      <div class="particulas"></div>
-      <div class="container d-flex flex-column justify-content-center align-items-center text-center position-absolute" data-aos="zoom-out">
-        <h2>Welcome to Block<span>fy</span></h2>
-        <p>Transformando ideas en soluciones tecnológicas, apoyando el crecimiento de proyectos en etapas tempranas.</p>
-        <div class="d-flex">
-          <a href="https://www.youtube.com/watch?v=RNY7HUi4KV8&t=3s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
-        </div>
-      </div>
-    </section>
-
     <main id="main">
-      <!-- ======= Tecnologias que usamos ======= -->
-      <div id="clients" class="clients">
-        <div class="container" data-aos="zoom-out">
-          <div class="clients-slider swiper">
-            <div class="swiper-wrapper align-items-center">
-              <div class="swiper-slide"><img src="assets/img/clients/Tecnologias_01.png" class="img-fluid" alt="" /></div>
-              <div class="swiper-slide"><img src="assets/img/clients/Tecnologias_02.png" class="img-fluid" alt="" /></div>
-              <div class="swiper-slide"><img src="assets/img/clients/Tecnologias_03.png" class="img-fluid" alt="" /></div>
-              <div class="swiper-slide"><img src="assets/img/clients/Tecnologias_04.png" class="img-fluid" alt="" /></div>
-              <div class="swiper-slide"><img src="assets/img/clients/Tecnologias_05.png" class="img-fluid" alt="" /></div>
+      <section id="hero-animated" class="hero-animated d-flex justify-content-center align-items-center">
+        <div class="primera d-flex justify-content-center align-items-center position-absolute">
+          <div class="container d-flex flex-column justify-content-center align-items-center text-center position-absolute" data-aos="zoom-out">
+            <h2>Welcome to Block<span>fy</span></h2>
+            <p>Transformando ideas en soluciones tecnológicas, apoyando el crecimiento de proyectos en etapas tempranas.</p>
+            <div class="d-flex">
+              <a href="https://www.youtube.com/watch?v=RNY7HUi4KV8&t=3s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
             </div>
           </div>
+          <div class="esfera"></div>
         </div>
-      </div>
+        <div class="Segunda row d-flex justify-content-center align-items-center position-absolute">
+          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="zoom-out">
+            <h2>Welcome to Block<span>fy</span></h2>
+            <p>Transformando ideas en soluciones tecnológicas, apoyando el crecimiento de proyectos en etapas tempranas.</p>
+            <div class="d-flex">
+              <a href="https://www.youtube.com/watch?v=RNY7HUi4KV8&t=3s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12"><img src="assets\img\animacion\Elemento1.png" width="250" height="200" srcset="" /></div>
+        </div>
+        <div class="Tercera row d-flex justify-content-center align-items-center position-absolute">
+          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="zoom-out">
+            <h2>Welcome to Block<span>fy</span></h2>
+            <p>Transformando ideas en soluciones tecnológicas, apoyando el crecimiento de proyectos en etapas tempranas.</p>
+            <div class="d-flex">
+              <a href="https://www.youtube.com/watch?v=RNY7HUi4KV8&t=3s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12"><img src="assets\img\animacion\Elemento2.png" width="250" height="200" srcset="" /></div>
+        </div>
+        <div class="Cuarta row d-flex justify-content-center align-items-center position-absolute">
+          <div class="col-lg-6 col-md-6 col-sm-12" data-aos="zoom-out">
+            <h2>Welcome to Block<span>fy</span></h2>
+            <p>Transformando ideas en soluciones tecnológicas, apoyando el crecimiento de proyectos en etapas tempranas.</p>
+            <div class="d-flex">
+              <a href="https://www.youtube.com/watch?v=RNY7HUi4KV8&t=3s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12"><img src="assets\img\animacion\Elemento3.png" width="250" height="200" srcset="" /></div>
+        </div>
+      </section>
+      <!-- ======= Tecnologias que usamos ======= -->
+
       <!-- End Clients Section -->
 
       <!-- ======= Portfolio Section ======= -->
-      <section id="portfolio" class="portfolio" data-aos="fade-up">
-        <div class="container">
-          <div class="section-header">
-            <h2>Sitios de terceros desarrollados por Blockfy</h2>
-            <p>Echemos un vistazo a algunos casos de éxito que crecieron con nosotros.</p>
+      <section id="ejemplo" class="ejemplo">
+        <div class="container" data-aos="zoom-out">
+          <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-lg-4 col-md-4 col-sm-12"><img src="assets/img/servicios/tarjeta 1.1.png" alt="target1" /></div>
+            <div class="col-lg-4 col-md-4 col-sm-12"><img src="assets/img/servicios/tarjeta 1.2.png" alt="target2" /></div>
+            <div class="col-lg-4 col-md-4 col-sm-12"><img src="assets/img/servicios/tarjeta 1.3.png" alt="target3" /></div>
           </div>
-        </div>
-
-        <div class="container-fluid" data-aos="fade-up" data-aos-delay="200">
-          <div class="portfolio-isotope" data-portfolio-filter="*" data-portfolio-layout="masonry" data-portfolio-sort="original-order">
-            <ul class="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Dapps</li>
-              <li data-filter=".filter-product">RealState</li>
-              <li data-filter=".filter-branding">Blockchain</li>
-            </ul>
-            <!-- End Portfolio Filters -->
-
-            <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="500">
-              <div class="portfolio-item filter-app">
-              <div class="cards d-flex row justify-content-between ">
-                <div class="d-flex row justify-content-center containers mt-5">
-                  <div class="col-lg-4 col-mg-6-col-sm-10 img-card m-2">
-                    <a href="#descripcionMissuniverse" class="glightbox"><img src="assets/img/missuniverse.png" alt="" /></a>
-                  </div>
-                  <div class="col-lg-4 col-mg-6-col-sm-10 info m-2">
-                    <h2>Miss Universe Colombia</h2>
-                    <p>Primera aplicación descentralizada (Dapp) para el certamen de belleza mundial, permite crear colecciones NFT propias sin necesidad de usar código o crear contratos inteligentes, también permite mediante conexión web 3.0 subastar activos digitales, y generar recaudación para fines de responsabilidad social.</p>
-                  </div>
-                </div>
-                <div class="d-flex row justify-content-center mt-5">
-                  <div class="col-lg-8 col-sm-10 descripcion" style="display: none">
-                    <iframe id="descripcionMissuniverse" src="https://aritymissuniverse.arity.club/"></iframe>
-                  </div>
-                </div>
-              </div>
-            </div>
-              <!-- End Portfolio Item -->
-              <div class="portfolio-item filter-product">
-              <div class="cards d-flex row justify-content-between ">
-                <div class="d-flex row justify-content-center containers mt-5">
-                  <div class="col-lg-4 col-mg-6-col-sm-10 info m-2">
-                    <h2>Principia </h2>
-                    <p>Mediante una aplicación descentralizada, nuestro aliado puede tokenizar proyectos externos sin necesidad de tener un equipo blockcahin especializado en su composición empresarial, este fondo de inversión actualmente tokeniza en su gran mayoría proyectos en el sector de real state.</p>
-                  </div>
-                  <div class="col-lg-4 col-mg-6-col-sm-10 img-card m-2">
-                    <a href="#descripcion" class="glightbox"><img src="assets/img/Principia.png" style="object-fit: fill; border: 5px solid #00eeff" alt="" /></a>
-                  </div>
-                </div>
-                <div class="d-flex row justify-content-center mt-5">
-                  <div class="col-lg-8 col-sm-10 descripcion" style="display: none">
-                    <iframe id="descripcion" src="https://principia.contractsol.co/"></iframe>
-                  </div>
-                </div>
-              </div>
-            </div>
-              <!-- End Portfolio Item -->
-              <div class="portfolio-item filter-app">
-              <div class="cards d-flex row justify-content-between ">
-                <div class="d-flex row justify-content-center containers mt-5">
-                  <div class="col-lg-4 col-mg-6-col-sm-10 img-card m-2">
-                    <a href="#descripcionArity" class="glightbox"><img src="assets/img/Arity.png" alt="" /></a>
-                  </div>
-                  <div class="col-lg-4 col-mg-6-col-sm-10 info m-2">
-                    <h2>Arity</h2>
-                    <p>El primer proyecto en colombia que fusiona la extracción legal y ambientalmente permitida de oro mineral y la posibilidad de invertir con pocas cantidades de liquidez en esta actividad de bajo riesgo, la democratización de la extracción de oro.
-                      <br></br>
-                      También mediante esta solución tecnológica pueden tener trazabilidad completa de joyas terminadas usando materiales de su propiedad para generar alto valor agregado.</p>
-                  </div>
-                </div>
-                <div class="d-flex row justify-content-center mt-5">
-                  <div class="col-lg-8 col-sm-10 descripcion" style="display: none">
-                    <iframe id="descripcionArity" src="https://arity.club/"></iframe>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-            <!-- End Portfolio Container -->
+          <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-lg-4 col-md-4 col-sm-12"><img src="assets/img/servicios/tarjeta 1.4.png" alt="target4" /></div>
+            <div class="col-lg-4 col-md-4 col-sm-12"><img src="assets/img/servicios/tarjeta 1.5.png" alt="target5" /></div>
+            <div class="col-lg-4 col-md-4 col-sm-12"><img src="assets/img/servicios/tarjeta 1.6.png" alt="target6" /></div>
           </div>
         </div>
       </section>
-      <!-- End Portfolio Section -->
-      <!-- ======= About Section ======= -->
-      <section id="about" class="about">
-        <div class="container" data-aos="fade-up">
-          <div class="animation"></div>
-          <div class="section-header">
-            <h2>Sobre nosotros</h2>
-            <p>
-              Blockfy es una marca desarrollada por Contract.sol SAS, una compañia colombiana con inversionistas residentes en New York,  nos enfocamos en la creación de herramientas que empleen poco código para dar solución a desarrollo web 3.0, nuestros aliados han solucionado sus inconvenientes sin necesidad de contratar un equipo especializado interno, al usar mano de obra colombiana reducimos los costos de producción de código convirtiendo nuestros precios en opciones altamente competitivas en la región. 
-              <br>
-              Escuchamos ideas, desarrollamos software a partir de ellas y ayudamos a incubar para que estés en el mercado lo antes posible, ve a contacto y escríbenos, una reunión de 15 minutos podría resultar en una inercia empresarial increible.</p>
+      <div id="clients" class="clients">
+        <div class="container" data-aos="">
+          <div class="clients-slider swiper">
+            <div class="swiper-wrapper align-items-center">
+              <div class="swiper-slide"><img src="assets/img/asociados/davivienda.png" class="img-fluid" alt="" /></div>
+              <div class="swiper-slide"><img src="assets/img/asociados/segurosBolivar.png" class="img-fluid" alt="" /></div>
+              <div class="swiper-slide"><img src="assets/img/asociados/miss.png" class="img-fluid" alt="" /></div>
+              <div class="swiper-slide"><img src="assets/img/asociados/offchain.png" class="img-fluid" alt="" /></div>
+            </div>
           </div>
         </div>
-      </section>
+      </div>
       <!-- End About Section -->
       <!-- ======= Contact Section ======= -->
-      <section id="contact" class="contacto">
-        <div class="section-header mb-5">
-          <h2>Contacto</h2>
-          <p>Para establecer contacto con nosotros da click en say hello y escoge la opcion de tu preferencia</p>
-        </div>
-        <div class="container">
-          <div class="Contactheader">
-            <a href="javascript:void(0)" class="btn btn-hello">SAY HELLO</a>
-            <div class="contact">
-              <div class="tiles-container abs-center">
-                <a href="https://www.linkedin.com/in/nicole-geraldine-guzman-garc%C3%ADa-58958a17a/" class="contact-tiles facebook">LINKEDIN</a>
-                <a href="https://www.instagram.com/daniluquetv/" class="contact-tiles instagram">INSTAGRAM</a>
-                <a href = "mailto: business@contract-sol.com" class="contact-tiles email">E-MAIL</a>
-                <a href="https://wa.me/+573208949771" class="contact-tiles telephone">WHATSAPP</a>
-              </div>
-            </div>
-          </div>
-          <div class="main">
-            <a href="javascript:void(0)" class="btn btn-hello ">SAY HELLO</a>
-          </div>
-        </div>
-      </section>
+
       <!-- End Contact Section -->
     </main>
     <!-- End #main -->
@@ -280,9 +208,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r117/three.min.js"></script>
 
     <script src="assets/js/Three.js"></script>
-
-    <!-- Template Main JS File -->
-
+    <script src="assets/js/scroll.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
