--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <section id="hero-animated" class="hero-animated d-flex justify-content-center align-items-center">
         <div class="primera d-flex justify-content-center align-items-center position-absolute">
           <div class="container d-flex flex-column justify-content-center align-items-center text-center position-absolute" data-aos="zoom-out">
-            <h2>Welcome to Block<span>fy</span></h2>
-            <p>Transformando ideas en soluciones tecnológicas, apoyando el crecimiento de proyectos en etapas tempranas.</p>
+            <h2>El mejor aliado en desarrollo e implementación <span>blockchain.</span></h2>
+            <p>Blockfy acompaña, capacita y desarrolla soluciones Web 3.0 para empresas y proyectos</p>
             <div class="d-flex">
               <a href="https://www.youtube.com/watch?v=RNY7HUi4KV8&t=3s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
             </div>
@@ -96,30 +96,30 @@
         </div>
         <div class="Segunda row d-flex justify-content-center align-items-center position-absolute">
           <div class="col-lg-6 col-md-6 col-sm-12" data-aos="zoom-out">
-            <h2>Welcome to Block<span>fy</span></h2>
-            <p>Transformando ideas en soluciones tecnológicas, apoyando el crecimiento de proyectos en etapas tempranas.</p>
-            <div class="d-flex">
-              <a href="https://www.youtube.com/watch?v=RNY7HUi4KV8&t=3s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            <h2><span>Tokeniza</span> junto a nosotros el futuro</h2>
+            <p>Blockfy construye y asesora proyectos de tokenización de 0 a 100,  implementando  tecnología blockchain y protocolos de seguridad para todos.</p>
+            <div class="d-flex justify-content-center align-items-center">
+              <a href="https://www.youtube.com/watch?v=RNY7HUi4KV8&t=3s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Saber Más</span></a>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12"><img src="assets\img\animacion\Elemento1.png" width="250" height="200" srcset="" /></div>
         </div>
         <div class="Tercera row d-flex justify-content-center align-items-center position-absolute">
           <div class="col-lg-6 col-md-6 col-sm-12" data-aos="zoom-out">
-            <h2>Welcome to Block<span>fy</span></h2>
-            <p>Transformando ideas en soluciones tecnológicas, apoyando el crecimiento de proyectos en etapas tempranas.</p>
-            <div class="d-flex">
-              <a href="https://www.youtube.com/watch?v=RNY7HUi4KV8&t=3s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            <h2>Construye junto a nosotros el futuro del sector <span>inmobiliario</span></h2>
+            <p>Por medio de nuestra marca especializada en gemelos digitales, construimos alternativas tecnológicas para ayudar a incrementar ventas internacionales en el sector inmobiliario.</p>
+            <div class="d-flex justify-content-center align-items-center">
+              <a href="https://www.youtube.com/watch?v=RNY7HUi4KV8&t=3s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Saber Más</span></a>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12"><img src="assets\img\animacion\Elemento2.png" width="250" height="200" srcset="" /></div>
         </div>
         <div class="Cuarta row d-flex justify-content-center align-items-center position-absolute">
           <div class="col-lg-6 col-md-6 col-sm-12" data-aos="zoom-out">
-            <h2>Welcome to Block<span>fy</span></h2>
-            <p>Transformando ideas en soluciones tecnológicas, apoyando el crecimiento de proyectos en etapas tempranas.</p>
-            <div class="d-flex">
-              <a href="https://www.youtube.com/watch?v=RNY7HUi4KV8&t=3s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            <h2>Protege tus activos digitales y los de tu empresa con nuestros procesos de <span>seguridad</span></h2>
+            <p>Desarrollamos protocolos multi-firmas y nos apoyamos de la tecnología de wallets frías (Ledger) para brindar un proceso de doble autenticación para asegurar y proteger tus activos de ataques cibernéticos.</p>
+            <div class="d-flex justify-content-center align-items-center">
+              <a href="https://www.youtube.com/watch?v=RNY7HUi4KV8&t=3s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Saber Más</span></a>
             </div>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12"><img src="assets\img\animacion\Elemento3.png" width="250" height="200" srcset="" /></div>
