--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               <!-- You can delete the links only if you purchased the pro version. -->
               <!-- Licensing information: https://bootstrapmade.com/license/ -->
               <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-              By <a href="https://contractsol.co/">Contract.sol SAS - Colombia</a>
+              By <a href="https://blockfy.app/">Blockfy SAS - Colombia</a>
             </div>
           </div>
 
