--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </li>
               </ul>
             </li>
-            <li><button class="botonContacto">Contactenos</button></li>
+            <li><a href="https://wa.me/573115250822" target="_blank" class="botonContacto">Contactenos</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle d-none"></i>
         </nav>
@@ -86,7 +86,7 @@
       <section id="hero-animated" class="hero-animated d-flex justify-content-center align-items-center">
         <div class="primera d-flex justify-content-center align-items-center position-absolute">
           <div class="container d-flex flex-column justify-content-center align-items-center text-center position-absolute" data-aos="zoom-out">
-            <h2>El mejor aliado en desarrollo e implementación <span>blockchain.</span></h2>
+            <h2 class="text-center">El mejor aliado en desarrollo e implementación <span>blockchain.</span></h2>
             <p>Blockfy acompaña, capacita y desarrolla soluciones Web 3.0 para empresas y proyectos</p>
             <div class="d-flex">
               <a href="https://www.youtube.com/watch?v=RNY7HUi4KV8&t=3s" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
@@ -182,8 +182,9 @@
           </div>
 
           <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/blockfy&metaeste/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <!--<a href="#" class="instagram"><i class="bi bi-instagram"></i></a>-->
+            
           </div>
         </div>
       </div>
